Chore: adding styling files

--- a/src/global.sass
+++ b/src/global.sass
@@ -8,10 +8,15 @@
 
 html, body, #root
   height: 100%
+  font-size: 8pt
 
 body
-  background: #e5e6f0
   --webkit-font-smoothing: antialiased
+  background-color: #121212
+  display: flex
+  flex-direction: column
+  justify-content: space-around
+  align-items: center
 
 body, input, button
   font-family: Roboto, sans-serif
