Subindo alterações nos componentes do react

--- a/src/components/Cards/Cards.sass
+++ b/src/components/Cards/Cards.sass
@@ -2,11 +2,12 @@
     width: 95%
     height: 95%
     background-color: #1b1b1b
+    display: flex
 
 .filtro
     height: 100%
     width: 20%
-    background-color: #242424
+    background-color: #1b1b1b;
 
 .box-titulo-filtro
     height: 15%
@@ -19,8 +20,7 @@
 .titulo-filtro
     font-size: 3em
     color: white
-    //2d2d2d
-    //353535
+
     //botao é 353535
 
 #botao-pesquisar
@@ -76,3 +76,13 @@
     width: 100%
 .lista-filtros li label
     color: #b9b9b9
+#card-resultados
+    width: 30%
+    height: 100%
+    background-color: #242424
+
+#card-detalhes
+    width: 55%
+    height: 100%
+    background-color: #2d2d2d
+    
