--- a/src/global.sass
+++ b/src/global.sass
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap')
+@import url("https://use.typekit.net/kfv6zmf.css")
 
 *
   margin: 0
@@ -25,3 +26,6 @@ body, input, button
   width: 100%
   height: 100%
   display: flex
+
+
+
