--- a/src/components/Modal/Modal.sass
+++ b/src/components/Modal/Modal.sass
@@ -1,10 +1,8 @@
 .modal 
-  top: 80px
-  // left: 164px
-  width: 952px
-  height: 640px
+  width: 74.21vw
+  height: 80vh
+  border: solid 1px rgba(255, 255, 255, 0.87)
   background: #121212 0% 0% no-repeat padding-box
-  border: 1px solid #FFFFFFDE
   opacity: 1
   position: absolute
   display: grid
@@ -13,14 +11,56 @@
 	grid-area: models
 
 .content
-	grid-area: content
+  grid-area: content
+  top: 80px
+  background: #FFFFFF0D 0% 0% no-repeat padding-box
+  opacity: 1
 
 .todo
 	grid-area: todo
 
 .structure
-  // grid-template-columns: 30% 60% 10%;
-	grid-template-areas: "models content todo"
+  grid-template-columns: 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw
+  column-gap: 1.25vw
+  grid-template-areas: "models models models models models content content content content content content content content content todo todo todo todo todo todo todo todo"
+
+button
+  width: 160px
+  height: 45px
+  background-color: rgba(255, 255, 255, 0.04)
+
+button span
+  top: 654px
+  left: 661px
+  width: 87px
+  height: 24px
+  text-align: right
+  font: Condensed Semibold 16px/24px Bernina Sans
+  letter-spacing: 0.02px
+  color: #FFFFFFDE
+  text-transform: uppercase
+  opacity: 1
+
+.container
+  // margin: 0 auto
+  display: flex
+  align-items: stretch
+  flex-direction: column
+
+.item
+  // flex: 1
+  // margin: 5px
+  // padding: 0 10px
+  // background: tomato
+  // text-align: center
+  // font-size: 1.5em
+  width: 160px
+  height: 48px
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16)
+  background-color: rgba(255, 255, 255, 0.07)
+
+// .item:first-child
+//   margin-top: 30px
 
 
 
