--- a/src/global.sass
+++ b/src/global.sass
@@ -20,3 +20,23 @@ body
 
 body, input, button
   font-family: Roboto, sans-serif
+
+h1
+  color: rgba(255, 255, 255, 0.6)
+  text-transform: uppercase
+  font-family: jaf-bernina-sans-comp, sans-serif
+  font-weight: 400
+  font-style: normal
+  font-size: 6rem
+  line-height: 7rem
+
+h2
+  font-family: jaf-bernina-sans-narrow, sans-serif
+  font-size: 28px
+  font-weight: normal
+  font-stretch: normal
+  font-style: normal
+  line-height: 1.17
+  letter-spacing: -0.02px
+  text-align: left
+  color: rgba(255, 255, 255, 0.6)
