--- a/src/components/Modal/Modal.sass
+++ b/src/components/Modal/Modal.sass
@@ -25,9 +25,18 @@
   grid-template-areas: "models models models models models content content content content content content content content content todo todo todo todo todo todo todo todo"
 
 button
+  cursor: pointer
+  border: none
   width: 160px
-  height: 45px
-  background-color: rgba(255, 255, 255, 0.04)
+  height: 48px
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16)
+  background-color: rgba(255, 255, 255, 0.07)
+
+button:hover
+  opacity: 0.9
+  border: solid 1px #ffffff
+  background-color: rgba(255, 255, 255, 0.09)
+  color: rgba(255, 255, 255, 0.87)
 
 button span
   top: 654px
@@ -42,82 +51,24 @@ button span
   opacity: 1
 
 .container
-  // margin: 0 auto
   display: flex
+  margin: 26px 11px 0 44px
   align-items: stretch
   flex-direction: column
 
 .item
-  // flex: 1
-  // margin: 5px
-  // padding: 0 10px
-  // background: tomato
-  // text-align: center
-  // font-size: 1.5em
   width: 160px
   height: 48px
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16)
   background-color: rgba(255, 255, 255, 0.07)
+  margin-top: 20px
 
-// .item:first-child
-//   margin-top: 30px
+.item:first-of-type
+  margin-top: 40px
 
+.between
+  display: flex
+  justify-content: space-between
 
-
-// .modal 
-//   width: 500px
-//   background: white
-//   border: 1px solid #ccc
-//   transition: 1.1s ease-out
-//   box-shadow: -2rem 2rem 2rem rgba(0, 0, 0, 0.2)
-//   filter: blur(0)
-//   transform: scale(1)
-//   opacity: 1
-//   visibility: visible
-
-// .modal.off 
-//   opacity: 0
-//   visibility: hidden
-//   filter: blur(8px)
-//   transform: scale(0.33)
-//   box-shadow: 1rem 0 0 rgba(0, 0, 0, 0.2)
-
-// @supports (offset-rotation: 0deg) 
-//   offset-rotation: 0deg
-//   offset-path: path("M 250,100 S -300,500 -700,-200")
-//   .modal.off 
-//     offset-distance: 100%
-  
-
-// @media (prefers-reduced-motion) 
-//   .modal 
-//     offset-path: none
-  
-
-// .modal h2 
-//   border-bottom: 1px solid #ccc
-//   padding: 1rem
-//   margin: 0
-
-// .modal .content 
-//   padding: 1rem
-
-// .modal .actions 
-//   border-top: 1px solid #ccc
-//   background: #eee
-//   padding: 0.5rem 1rem
-
-// .modal .actions button 
-//   border: 0
-//   background: #78f89f
-//   border-radius: 5px
-//   padding: 0.5rem 1rem
-//   font-size: 0.8rem
-//   line-height: 1
-
-// #centered-toggle-button 
-//   position: absolute
-
-// .modal h3
-//   color: black
-//   text-align: center
+.label_margin
+  margin-top: 40px
