--- a/src/global.sass
+++ b/src/global.sass
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap')
+@import url("https://use.typekit.net/kfv6zmf.css")
 
 *
   margin: 0
@@ -24,14 +24,14 @@ body, input, button
 h1
   color: rgba(255, 255, 255, 0.6)
   text-transform: uppercase
-  font-family: jaf-bernina-sans-comp, sans-serif
+  font-family: Condensed Semibold 16px/24px Bernina Sans
   font-weight: 400
   font-style: normal
   font-size: 6rem
   line-height: 7rem
 
 h2
-  font-family: jaf-bernina-sans-narrow, sans-serif
+  font-family: Condensed Semibold 16px/24px Bernina Sans
   font-size: 28px
   font-weight: normal
   font-stretch: normal
@@ -40,3 +40,14 @@ h2
   letter-spacing: -0.02px
   text-align: left
   color: rgba(255, 255, 255, 0.6)
+
+label
+  font-family: BerninaSans-Narrow
+  font-size: 21px
+  font-weight: 300
+  font-stretch: normal
+  font-style: normal
+  line-height: 1.38
+  letter-spacing: -0.5px
+  text-align: left
+  color: rgba(255, 255, 255, 0.87)
