Chore: add styles on session content

--- a/src/components/Modal/Modal.sass
+++ b/src/components/Modal/Modal.sass
@@ -69,6 +69,14 @@ button span
 .between
   display: flex
   justify-content: space-between
+  align-items: flex-end
 
 .label_margin
   margin-top: 40px
+
+.form_between
+  display: flex
+  justify-content: space-between
+
+.form_between label
+  width: 45%
