--- a/src/global.sass
+++ b/src/global.sass
@@ -42,6 +42,7 @@ h2
   color: rgba(255, 255, 255, 0.6)
 
 label
+  margin-top: 20px
   font-family: BerninaSans-Narrow
   font-size: 21px
   font-weight: 300
@@ -51,3 +52,13 @@ label
   letter-spacing: -0.5px
   text-align: left
   color: rgba(255, 255, 255, 0.87)
+
+input, select, textarea
+  background-color: transparent
+  border: none
+  width: 100%
+  color: rgba(255, 255, 255, 0.6)
+  border-bottom: 0.2rem solid rgba(255, 255, 255, 0.6)
+
+option
+  background-color: rgb(31, 31, 31)
