--- a/src/components/Cards/Cards.sass
+++ b/src/components/Cards/Cards.sass
@@ -86,3 +86,7 @@
     height: 100%
     background-color: #2d2d2d
     
+.cabecalho-card
+    display: flex
+    justify-content: space-between
+    height: 10%
