--- a/src/components/Cards/Cards.sass
+++ b/src/components/Cards/Cards.sass
@@ -9,8 +9,8 @@
     width: 20%
     background-color: #1b1b1b;
 
-.box-titulo-filtro
-    height: 15%
+.box-titulo-card
+    height: 10%
     width: 100%
     display: flex
     justify-content: center
@@ -18,23 +18,19 @@
 
 
 .titulo-filtro
-    font-size: 3em
     color: white
 
-    //botao é 353535
-
 #botao-pesquisar
-    width: 17%
-    height: 40px
+    width: 50px
+    height: 50px
     background-color: #353535
     border: none
-    max-width: 40px
 
 #campo-busca
-    height: 40px
+    height: 50px
     background-color: #353535
     border: none
-    width: 73%
+    width: 100%
 
 #busca
     display: flex
@@ -47,6 +43,16 @@
     border: solid 1px white
     margin-top: 15px
 
+input
+  font-size: 2rem
+
+
+input::placeholder
+  font-size: 2rem
+  display: flex
+  align-itens: center
+  padding-left: 2%
+
 .box-botao-colapso a
     height: 100%
     width: 100%
@@ -57,25 +63,34 @@
     padding: 5% 10%
     color: white !important
 
+#filtros
+    height: 65%
+
+.box-botao-criar-atividade
+    height: 10%
+    display: flex
+    align-items: flex-end
+
+.box-botao-criar-atividade button
+    height: 70%
+    font-size: 1.5rem
+    border: none
+
 
 .box-botao-colapso a:hover
     text-decoration: none
     color: #b9b9b9 !important
-
-
-#filtros
-    display: flex
-    justify-content: center
-    align-items: center
-    flex-flow: column
 
 .lista-filtros
     display: flex
     flex-flow: column
     height: 100%
     width: 100%
+
+
 .lista-filtros li label
     color: #b9b9b9
+
 #card-resultados
     width: 30%
     height: 100%
@@ -90,3 +105,18 @@
     display: flex
     justify-content: space-between
     height: 10%
+
+#card-detalhes .box-titulo-card
+    justify-content: space-between
+
+.bd-example
+    height: 40%
+    display: flex
+
+.bd-example button
+    border: none !important
+    font-size: 2rem
+
+.box-form-search
+    height: 10%
+
