--- a/src/global.sass
+++ b/src/global.sass
@@ -62,3 +62,15 @@ input, select, textarea
 
 option
   background-color: rgb(31, 31, 31)
+
+a
+  text-transform: uppercase
+  font-family: BerninaSans-S
+  font-size: 16px
+  font-weight: bold
+  font-stretch: condensed
+  font-style: normal
+  line-height: 1.5
+  letter-spacing: 0.02px
+  text-align: center
+  color: rgba(255, 255, 255, 0.87)
