--- a/src/global.sass
+++ b/src/global.sass
@@ -74,3 +74,29 @@ a
   letter-spacing: 0.02px
   text-align: center
   color: rgba(255, 255, 255, 0.87)
+
+button
+  cursor: pointer
+  border: none
+  width: 160px
+  height: 48px
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16)
+  background-color: rgba(255, 255, 255, 0.07)
+
+button:hover
+  opacity: 0.9
+  border: solid 1px #ffffff
+  background-color: rgba(255, 255, 255, 0.09)
+  color: rgba(255, 255, 255, 0.87)
+
+button span
+  top: 654px
+  left: 661px
+  width: 87px
+  height: 24px
+  text-align: right
+  font: Condensed Semibold 16px/24px Bernina Sans
+  letter-spacing: 0.02px
+  color: #FFFFFFDE
+  text-transform: uppercase
+  opacity: 1
