subindo as alterações nos cards

--- a/src/components/Cards/Cards.sass
+++ b/src/components/Cards/Cards.sass
@@ -120,3 +120,17 @@ input::placeholder
 .box-form-search
     height: 10%
 
+#lista-afazeres, #ficha-tecnica
+    height: 100%
+
+#lista-afazeres
+    background: #FFFFFF0A 0% 0% no-repeat padding-box
+
+.form-check
+    font-size: 2rem
+
+p
+    font-size: 1.5rem
+
+#main-card-detalhes
+    height: 100%
