--- a/src/components/Cards/Cards.sass
+++ b/src/components/Cards/Cards.sass
@@ -43,9 +43,6 @@
     border: solid 1px white
     margin-top: 15px
 
-input
-  font-size: 2rem
-
 
 input::placeholder
   font-size: 2rem
@@ -123,14 +120,167 @@ input::placeholder
 #lista-afazeres, #ficha-tecnica
     height: 100%
 
-#lista-afazeres
-    background: #FFFFFF0A 0% 0% no-repeat padding-box
-
 .form-check
-    font-size: 2rem
-
-p
-    font-size: 1.5rem
+    font-size: 1.8rem
+    display: flex
+    align-items: center
 
 #main-card-detalhes
     height: 100%
+
+#box-form-checkbox
+    color: white
+
+.form-check-label
+    margin-left: 3%
+
+input
+    width: 18px
+    height: 18px
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+    color: black
+    cursor: pointer
+    
+
+.descricao-atividade
+    font-weight: 100
+    padding-left: 1.25rem
+
+checkbox-container 
+    float: left
+    width: 50%
+    box-sizing: border-box
+    text-align:center
+    padding: 40px 0px
+
+
+.circular-container 
+  background-color: #0067FF
+
+
+.input-title
+    clear: both
+    padding: 22px 0px 0px 0px
+    font-size: 16px
+    color: rgba(255,255,255,.6)
+    font-weight: 300
+
+
+
+.checkbox-label 
+    display: block
+    position: relative
+    cursor: pointer
+    font-size: 22px
+    line-height: 24px
+    height: 24px
+    width: 24px
+    clear: both
+    margin-bottom: 0px
+
+
+.checkbox-label input
+    position: absolute
+    opacity: 0
+    cursor: pointer
+
+
+.checkbox-label 
+    .checkbox-custom
+        position: absolute
+        top: 0px
+        left: 0px
+        height: 24px
+        width: 24px
+        background-color: transparent
+        border-radius: 5px
+        transition: all 0.3s ease-out
+        -webkit-transition: all 0.3s ease-out
+        -moz-transition: all 0.3s ease-out
+        -ms-transition: all 0.3s ease-out
+        -o-transition: all 0.3s ease-out
+        border: 1px solid #FFFFFF
+
+.checkbox-label 
+    input:checked ~ .checkbox-custom
+        background-color: transparent
+        border-radius: 5px
+        -webkit-transform: rotate(0deg) scale(1)
+        -ms-transform: rotate(0deg) scale(1)
+        transform: rotate(0deg) scale(1)
+        opacity: 1
+        border: 1px solid #FFFFFF
+
+
+.checkbox-label 
+    .checkbox-custom::after 
+        position: absolute
+        content: ""
+        left: 12px
+        top: 12px
+        height: 0px
+        width: 0px
+        border-radius: 5px
+        border: solid #009BFF
+        border-width: 0 3px 3px 0
+        -webkit-transform: rotate(0deg) scale(0)
+        -ms-transform: rotate(0deg) scale(0)
+        transform: rotate(0deg) scale(0)
+        opacity: 1
+        transition: all 0.3s ease-out
+        -webkit-transition: all 0.3s ease-out
+        -moz-transition: all 0.3s ease-out
+        -ms-transition: all 0.3s ease-out
+        -o-transition: all 0.3s ease-out
+
+
+.checkbox-label 
+    input:checked ~ .checkbox-custom::after
+        -webkit-transform: rotate(45deg) scale(1)
+        -ms-transform: rotate(45deg) scale(1)
+        transform: rotate(45deg) scale(1)
+        opacity: 1
+        left: 8px
+        top: 3px
+        width: 6px
+        height: 12px
+        border: solid #fff
+        border-width: 0 2px 2px 0
+        background-color: transparent
+        border-radius: 0
+
+
+.checkbox-label 
+    .checkbox-custom::before 
+        position: absolute
+        content: ""
+        left: 10px
+        top: 10px
+        width: 0px
+        height: 0px
+        border-radius: 5px
+        border: 2px solid #FFFFFF
+        -webkit-transform: scale(0)
+        -ms-transform: scale(0)
+        transform: scale(0)
+
+.checkbox-label 
+    input:checked ~ .checkbox-custom::before 
+        left: -3px
+        top: -3px
+        width: 24px
+        height: 24px
+        border-radius: 5px;
+        -webkit-transform: scale(3)
+        -ms-transform: scale(3)
+        transform: scale(3)
+        opacity: 0
+        z-index: 999
+        transition: all 0.3s ease-out
+        -webkit-transition: all 0.3s ease-out
+        -moz-transition: all 0.3s ease-out
+        -ms-transition: all 0.3s ease-out
+        -o-transition: all 0.3s ease-out
+
+
+
