--- a/src/components/Cards/Cards.sass
+++ b/src/components/Cards/Cards.sass
@@ -1,3 +1,5 @@
+h1
+    text-transform: none
 #super-card
     width: 95%
     height: 95%
@@ -15,7 +17,6 @@
     display: flex
     justify-content: center
     align-items: center
-
 
 .titulo-filtro
     color: white
@@ -62,37 +63,48 @@ input::placeholder
 
 #filtros
     height: 65%
-
 .box-botao-criar-atividade
     height: 10%
     display: flex
     align-items: flex-end
-
 .box-botao-criar-atividade button
     height: 70%
     font-size: 1.5rem
     border: none
-
-
 .box-botao-colapso a:hover
     text-decoration: none
     color: #b9b9b9 !important
-
 .lista-filtros
     display: flex
     flex-flow: column
     height: 100%
     width: 100%
-
-
 .lista-filtros li label
     color: #b9b9b9
 
 #card-resultados
-    width: 30%
+    width: 25%
     height: 100%
     background-color: #242424
+    display: flex
+    flex-flow: column
 
+#box-lista-resultados
+    height: 100%
+    width: 100%
+#lista-resultados
+    display: flex
+    justify-content: center
+    height: 100%
+.retangulo.active
+    width: 100%;
+    height: 84px;
+    border: solid 1px rgba(255, 255, 255, 0.87)
+    background-color: rgba(255, 255, 255, 0.04)
+.retangulo
+    width: 276px
+    height: 84px
+    background-color: rgba(255, 255, 255, 0.04)
 #card-detalhes
     width: 55%
     height: 100%
@@ -156,17 +168,12 @@ checkbox-container
 
 .circular-container 
   background-color: #0067FF
-
-
 .input-title
     clear: both
     padding: 22px 0px 0px 0px
     font-size: 16px
     color: rgba(255,255,255,.6)
     font-weight: 300
-
-
-
 .checkbox-label 
     display: block
     position: relative
@@ -177,8 +184,6 @@ checkbox-container
     width: 24px
     clear: both
     margin-bottom: 0px
-
-
 .checkbox-label input
     position: absolute
     opacity: 0
@@ -283,4 +288,10 @@ checkbox-container
         -o-transition: all 0.3s ease-out
 
 
+.cabecalho-resultado
+    color: white
+    justify-content: space-around
 
+.cabecalho-resultado
+    h4
+        font-size: 13px
