Fix: adds request using api

--- a/src/styles/sass/global.sass
+++ b/src/styles/sass/global.sass
@@ -75,6 +75,10 @@ a
   text-align: center
   color: rgba(255, 255, 255, 0.87)
 
+a:hover
+  cursor: pointer
+  opacity: 0.8
+
 button
   cursor: pointer
   border: none
