--- a/src/components/Cards/Cards.sass
+++ b/src/components/Cards/Cards.sass
@@ -96,6 +96,7 @@ input::placeholder
     display: flex
     justify-content: center
     height: 100%
+    padding-top: 3%
 .retangulo.active
     width: 100%;
     height: 84px;
@@ -105,6 +106,8 @@ input::placeholder
     width: 276px
     height: 84px
     background-color: rgba(255, 255, 255, 0.04)
+    display: flex;
+    flex-flow: column;
 #card-detalhes
     width: 55%
     height: 100%
@@ -295,3 +298,20 @@ checkbox-container
 .cabecalho-resultado
     h4
         font-size: 13px
+
+.retangulo-titulo-atividade
+    height: 100%
+    width: 100%
+    justify-content: center
+    align-items: center
+    display: flex
+
+.retangulo-titulo-atividade
+    h2
+        font-weight: bold
+
+.cabecalho-ficha-tecnica
+    height: 10%
+    width: 100%
+.cabecalho-ficha-tecnica p
+    color: white
