--- a/src/styles/sass/modal.sass
+++ b/src/styles/sass/modal.sass
@@ -102,3 +102,12 @@
 
 .modal_message .margin_center
   margin: 2vw
+
+.alert_block
+  width: 33.125vw
+  height: 32.50vh
+  border: solid 1px rgba(255, 255, 255, 0.87)
+  background: #121212 0% 0% no-repeat padding-box
+  opacity: 1
+  position: absolute
+  display: flex
