--- a/src/styles/css/modal.css
+++ b/src/styles/css/modal.css
@@ -5,62 +5,76 @@
   background: #121212 0% 0% no-repeat padding-box;
   opacity: 1;
   position: absolute;
-  display: grid; }
+  display: grid;
+}
 
 .models {
-  grid-area: models; }
+  grid-area: models;
+}
 
 .content {
   grid-area: content;
   top: 80px;
   background: #FFFFFF0D 0% 0% no-repeat padding-box;
-  opacity: 1; }
+  opacity: 1;
+}
 
 .todo {
-  grid-area: todo; }
+  grid-area: todo;
+}
 
 .structure {
   grid-template-columns: 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw 2.18vw;
   column-gap: 1.25vw;
-  grid-template-areas: "models models models models models content content content content content content content content content todo todo todo todo todo todo todo todo"; }
+  grid-template-areas: "models models models models models content content content content content content content content content todo todo todo todo todo todo todo todo";
+}
 
 .container {
   display: flex;
   margin: 26px 11px 0 44px;
   align-items: stretch;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .item {
   width: 160px;
   height: 48px;
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
   background-color: rgba(255, 255, 255, 0.07);
-  margin-top: 20px; }
+  margin-top: 20px;
+}
 
 .item:first-of-type {
-  margin-top: 40px; }
+  margin-top: 40px;
+}
 
 .between {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end; }
+  align-items: flex-end;
+}
 
 .label_margin {
-  margin-top: 40px; }
+  margin-top: 40px;
+}
 
 .form_between {
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+}
 
 .form_between label {
-  width: 45%; }
+  width: 45%;
+}
 
 .flex {
-  display: flex; }
+  display: flex;
+}
 
 .btn_closed {
   margin: 18px;
-  float: left; }
+  float: left;
+}
 
 .box {
   margin: 3vh 18.75vw;
@@ -71,23 +85,27 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center; }
+  align-items: center;
+}
 
 #logotext {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center; }
+  align-items: center;
+}
 
 .item.activate {
   border: solid 1px #ffffff;
-  background-color: rgba(255, 255, 255, 0.09); }
+  background-color: rgba(255, 255, 255, 0.09);
+}
 
 .container_between {
   height: 25vw;
   display: flex;
   justify-content: space-between;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .modal_message {
   width: 336px;
@@ -97,10 +115,12 @@
   bottom: 0;
   right: 0;
   margin: 20px;
-  color: white; }
+  color: white;
+}
 
 .modal_message .margin_center {
-  margin: 2vw; }
+  margin: 2vw;
+}
 
 .alert_block {
   width: 33.125vw;
@@ -109,6 +129,30 @@
   background: #121212 0% 0% no-repeat padding-box;
   opacity: 1;
   position: absolute;
-  display: flex; }
+  display: flex;
+  flex-direction: column;
+  color: white;
+  padding: 4px 40px;
+}
+
+.alert_block h1 {
+  font-size: 2rem;
+  line-height: 6rem;
+}
+
+.alert_block p {
+  font-style: italic;
+}
+
+.check {
+  display: flex;
+  flex-direction: row;
+  margin: 13px 0px;
+}
+
+.check input {
+  width: 0;
+  margin-right: 10px;
+}
 
 /*# sourceMappingURL=modal.css.map */
