--- a/src/styles/sass/modal.sass
+++ b/src/styles/sass/modal.sass
@@ -89,7 +89,6 @@
   justify-content: space-between
   flex-direction: column
 
-
 .modal_message
   width: 336px
   height: 129px
@@ -111,3 +110,22 @@
   opacity: 1
   position: absolute
   display: flex
+  flex-direction: column
+  color: white
+  padding: 4px 40px
+
+.alert_block h1
+  font-size: 2rem
+  line-height: 6rem
+
+.alert_block p
+  font-style: italic
+
+.check
+  display: flex
+  flex-direction: row
+  margin: 13px 0px
+
+.check input
+  width: 0
+  margin-right: 10px
